--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -17,4 +17,5 @@
     <string name="outError">Out</string>
     <string name="outRequestURL">Out Request URL</string>
     <string name="host">Host:</string>
+    <string name="check_for_updates_when_opening_the_program">Check for updates when opening the program</string>
 </resources>
